Chore: Update plans screens (#64)
* Chore: Updates Plan cards

* Chore: Removes Plan subscriptions

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -293,7 +293,8 @@
         "PREMIUM": "Premium Plan",
         "VIP": "VIP Plan",
 
-        "yield": "{{from}} - {{to}}% <small>monthly yield</small>"
+        "fee": "{{fee}}% <small>monthly fee</small>",
+        "price": "{{price}} <small>USDT</small>"
       },
 
       "selectSubscription": {
