Chore: Create account toast and forgot password link (#69)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,6 +101,11 @@
         "submit": "Create account"
       },
 
+      "toast": {
+        "title": "Account created",
+        "description": "Your account has been created successfully"
+      },
+
       "disclaimer": "By registering, you agree to our <bold>Privacy Policy</bold> and <bold>Terms and Conditions</bold>",
       "login": "Already have an account? <bold>Log in</bold>"
     },
