--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -39,7 +39,12 @@
           "label": "Contraseña",
           "placeholder": "Escribe tu contraseña"
         },
-        "submit": "Entrar"
+        otp: {
+          label: "Email confirmation",
+          description: "We have just sent you an email with a confirmation code. Please enter the code below and confirm your email address.",
+        },
+        "submit": "Entrar",
+        "submitOtp": "Confirm email"
       },
       "errors": {
         "loginFailed": "Login fallado",
