add OTP text and button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,7 +39,7 @@
           "label": "Password",
           "placeholder": "Write your password"
         },
-        otp: {
+        "otp": {
           "label": "Email confirmation",
           "description": "We have just sent you an email with a confirmation code. Please enter the code below and confirm your email address.",
         },
