add otp fake request

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,7 +41,8 @@
         },
         "otp": {
           "label": "Email confirmation",
-          "description": "We have just sent you an email with a confirmation code. Please enter the code below and confirm your email address."
+          "description": "We have just sent you an email with a confirmation code. Please enter the code below and confirm your email address.",
+          "error": "Confirmation code invalid"
         },
         "submit": "Log In",
         "submitOtp": "Confirm email"
