--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,7 +42,9 @@
         "otp": {
           "label": "Email confirmation",
           "description": "We have just sent you an email with a confirmation code. Please enter the code below and confirm your email address.",
-          "error": "Confirmation code invalid"
+          "error": "Confirmation code invalid",
+          "timerText": "Resend in",
+          "resendCode": "Resend code"
         },
         "submit": "Log In",
         "submitOtp": "Confirm email"
