--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -157,6 +157,10 @@
         "description": "The amount withdrawn will no longer be used for investment purposes.",
         "network": "Network",
         "selectNetwork": "Select network",
+        "token": "Token",
+        "selectToken": "Select token",
+        "nothingToWithdraw": "Not enough USDT to withdraw!",
+        "balance": "Balance",
         "walletAddress": "Wallet address",
         "amount": "USDT amount to withdraw",
         "withdrawWarning": "If the USDT withdrawal is equivalent to 1 or more BTC, you will need to verify your identity with your National ID and an invoice showing your current residence.",
