--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -157,6 +157,10 @@
         "description": "La cantidad retirada no se volverá a utilizar para invertir.",
         "network": "Red",
         "selectNetwork": "Selecciona red",
+        "token": "Token",
+        "selectToken": "Selecciona token",
+        "nothingToWithdraw": "Not enough USDT to withdraw!",
+        "balance": "Balance",
         "walletAddress": "Dirección de Cartera",
         "amount": "Cantidad de USDT a retirar",
         "withdrawWarning": "Si la cantidad de USDT a retirar es equivalente a 1 o mas BTC, necesitarás verificar tu identidad con tu documento nacional y una factura que muestre su residencia actual.",
